# Copyright (C) 2016  ParadoxSpiral
#
# This file is part of mpv-rs.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

[package]
name = "mpv"
version = "0.0.1"
authors = ["ParadoxSpiral <paradoxspiral@riseup.net>"]
license = "LGPLv2.1"
build = "build.rs"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
keywords = ["media", "playback", "mpv", "libmpv"]

[dependencies]
libc = "0.2"
enum_primitive = "0.1"
error-chain = "0.10"
parking_lot = "0.4"

[dev-dependencies]
sdl2 = "0.30"
crossbeam = "0.2"

[build-dependencies]
hyper = "0.10"
git2 = "0.6"

[features]
default = ["events_complex", "custom_protocols", "opengl_callback"]
events_simple = [] # Enable simple event handling
events_complex = [] # Enable complex event handling
custom_protocols = [] # Enable custom protocol callbacks
opengl_callback = [] # Enable the opengl callback
build_libmpv = [] # build libmpv automatically at compile time

[badges]
travis-ci = { repository = "https://github.com/ParadoxSpiral/mpv-rs", branch = "master" } 