# Copyright (C) 2016  ParadoxSpiral
#
# This file is part of mpv-rs.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
[workspace]
members = ["mpv-sys"]

[package]
name = "mpv"
version = "0.1.0"
edition = "2018"
authors = ["ParadoxSpiral <paradoxspiral@riseup.net>"]
license = "LGPLv2.1"
build = "build.rs"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
keywords = ["media", "playback", "mpv", "libmpv"]


[dependencies]
parking_lot = "0.8"
mpv-sys = {version = "2", path = "mpv-sys/"}

[dev-dependencies]
crossbeam = "0.7"
imgui = "0.0.23"

[features]
default = ["events_simple", "protocols", "render"]
events_simple = [] # Enable simple event handling
events_sync = [] # Enable complex event handling
protocols = [] # Enable custom protocol callbacks
render = [] # Enable custom rendering
build_libmpv = [] # build libmpv automatically, provided MPV_SOURCE is set

[badges]
travis-ci = { repository = "https://github.com/ParadoxSpiral/mpv-rs", branch = "master" } 
